# stakewolle_test_case

./: Makefile  README.md  alembic.ini  main.py  pyproject.toml  setup.cfg  task2.py  task2.txt
alembic/: env.py
alembic/versions/: 4c986a85169f_add_referral_to_user.py  b988e07fbbcf_add_expires_at.py  d6805160acf8_fix_datatype.py  dbd3e3dbace1_init.py
stakewolle/: app.py  backend.py  engine.py
stakewolle/models/: models.py
stakewolle/routers/: referral.py
stakewolle/schemas/: referral.py  users.py
